# Paging-Simulation

./: .gitignore  CMakeLists.txt  FifoSimulation.cpp  FifoSimulation.h  GlobalClockSimulation.cpp  GlobalClockSimulation.h  LfuSimulation.cpp  LfuSimulation.h  LruSimulation.cpp  LruSimulation.h  OwnSimulation.cpp  OwnSimulation.h  PageTableEntry.cpp  PageTableEntry.h  PagingSimulation.cpp  PagingSimulation.h  README.md  RandomSimulation.cpp  RandomSimulation.h  main.cpp  test.txt
